[package]
name = "xbee_module"
version = "0.1.0"
edition = "2021"

include = ["oui.csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serialport = {version = "^3.3", features=["libudev"]}
bytes = "^0.5"
rand = "^0.7"
downcast-rs = "^1.1"

